--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "pretest": "npm run lint",
     "test": "mocha --recursive test",
     "lint": "eslint .",
-    "lintFix": "eslint --fix ."
+    "lintFix": "eslint --fix .",
+    "pm2:start": "npx pm2 start ecosystem.config.js",
+    "pm2:start:prod": "npx pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "npx pm2 stop ecosystem.config.js",
+    "pm2:restart": "npx pm2 restart ecosystem.config.js",
+    "pm2:reload": "npx pm2 reload ecosystem.config.js",
+    "pm2:delete": "npx pm2 delete ecosystem.config.js",
+    "pm2:logs": "npx pm2 logs",
+    "pm2:monit": "npx pm2 monit",
+    "pm2:setup": "mkdir -p logs && npm run pm2:start"
   },
   "bin": {
     "mock-hls-server": "./bin/cli.js"
@@ -27,7 +36,9 @@
     "streaming",
     "live",
     "cli",
-    "proxy"
+    "proxy",
+    "pm2",
+    "cluster"
   ],
   "author": "Tom Jenkinson <tjcode@outlook.com>",
   "license": "Apache-2.0",
@@ -39,6 +50,7 @@
     "command-line-args": "^4.0.7",
     "express": "^4.16.2",
     "node-fetch": "^2.6.1",
+    "pm2": "^5.3.0",
     "url-toolkit": "^2.1.2",
     "winston": "^2.4.0"
   },
